testing adding a gallery component

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -156,6 +156,13 @@ collections: # A list of collections the CMS should be able to edit
           - { label: Slug, name: slug, widget: hidden, default: '' }
           - { label: Featured Image, name: featuredImage, widget: image }
           - { label: Body, name: body, widget: markdown }
+          - label: 'Gallery'
+            name: 'gallery'
+            widget: 'list'
+            fields:
+              - { name: image, label: Image, widget: image }
+              - { name: alt, label: Alt, widget: string }
+              - { name: title, label: Title, widget: string, required: false }
           - label: 'Accordion'
             name: 'accordion'
             widget: 'list'
