--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -45,7 +45,7 @@ collections: # A list of collections the CMS should be able to edit
           - { label: Address, name: address, widget: text }
           - { label: Phone, name: phone, widget: string }
           - { label: Email Address, name: email, widget: string }
-          - { label: Facebook, name: facebook, widget: string }
+          - { label: Facebook, name: facebook, widget: string, required: false }
           - label: 'Meta'
             required: false
             name: 'meta'
